--- a/WebApplication1/Views/Customer/AddCustomer.cshtml
+++ b/WebApplication1/Views/Customer/AddCustomer.cshtml
@@ -10,8 +10,8 @@
     <body>
     <div> 
         <form action="Submit" method="post">
-            Customer Name <input name="CustomerName"  type="text" /><br />
-            Customer Code <input name="CustomerCode" type="text" /><br />
+            Customer Name <input name="txtCustomerName"  type="text" /><br />
+            Customer Code <input name="txtCustomerCode" type="text" /><br />
             <input id="Submit1" type="submit" value="submit" />
         </form>
     </div>
