--- a/WebBased/BlazorAppServer/Pages/MovieList.razor
+++ b/WebBased/BlazorAppServer/Pages/MovieList.razor
@@ -5,46 +5,115 @@
     <div align="right">
         <div class="col-6 text-end">
             <a asp-controller="Actors" asp-action="AddActor" class="btn btn-primary">
-               <i class="bi bi-plus-circle"></i> &nbsp; Add New Movie
-			</a>
-		</div>
-	</div>
+                <i class="bi bi-plus-circle"></i> &nbsp; Add New Movie
+            </a>
+        </div>
+    </div>
     <br /><br />
-@if (resultList == null)
+    @if (resultList == null)
     {
-           <div class="spinner"></div>
+        <div class="spinner"></div>
     }
     else
     {
-    <table class="table table-bordered table-striped" style="width:100%">
-        <thead>
-            <tr>
-                <th>ProfilePictureUrl</th>
-                <th>FullName</th>
-                <th>Bio</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-                @foreach (var obj in resultList)
-                {
-                    <tr>
-                        <td width="20%" class="align-middle">
-                         <img class="rounded-circle" src="@obj.ImageURL" alt="@obj.Name" style="max-width:80%"/>
-                         </td>
-                        <td width="20%" class="align-middle"> @obj.Name</td>
-                         <td width="20%" class="align-middle"> @obj.Description</td>
-                        <td class="align-middle">
-                            <div class="w-75 btn-group" role="group">
-                                <a class="btn btn-primary mx-2"> <i class="bi bi-pencil-square"></i> Edit</a>
-                                <a class="btn btn-primary mx-2" href="@($"moviedetails/{obj.Id}")"> <i class="bi bi-pencil-square"></i> Details</a>
-                                <a class="btn btn-danger mx-2"> <i class="bi bi-trash-fill"></i> Delete</a>
+        <div class="row">
+            @foreach (var item in resultList)
+            {
+                <div class="col-md-4 col-xs-6 border-primary mb-3">
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-12">
+                                <div class="card-header text-white bg-info">
+                                    <p class="card-text">
+                                        @* <h5 class="card-title">
+                                            @item.Name
+                                            @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                                            {
+                                            <a class="text-white float-right" asp-action="Edit" asp-route-id="@item.Id"><i class="bi bi-pencil-square"></i></a>
+                                            }
+                                            </h5>*@
+                                    </p>
+                                </div>
                             </div>
-                        </td>
-                    </tr>
-                }
-        </tbody>
+                            <div class="col-md-6">
+                                <img src="@item.ImageURL" width="100%" alt="@item.Name">
+                            </div>
+                            <div class="col-md-6">
+                                <div class="card-body">
+                                    <p class="card-text">@item.Description</p>
+                                    <p class="card-text"><b>Cinema: </b>@item.Cinema.Name</p>
+                                    <p class="card-text"><b>Category: </b>@item.MovieCategory</p>
+                                    <p class="card-text"><b>Start Date: </b>@item.StartDate.ToString("dd MMM yy")</p>
+                                    <p class="card-text"><b>End Date: </b>@item.EndDate.ToString("dd MMM yy")</p>
+                                    <p class="card-text ">
+                                        <b>Status: </b>
+                                        @if (DateTime.Now >= item.StartDate && DateTime.Now <= item.EndDate)
+                                        {
+                                            <span class="badge bg-success text-white">AVAILABLE</span>
+                                        }
+                                        else if (DateTime.Now > item.EndDate)
+                                        {
+                                            <span class="badge bg-danger text-white">EXPIRED</span>
+                                        }
+                                        else
+                                        {
+                                            <span class="badge bg-primary text-white">UPCOMING</span>
+                                        }
+                                    </p>
 
-    </table>
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <div class="card-footer ">
+                                    <p class="card-text">
+                                        <a class="btn btn-outline-primary float-right" asp-action="Details" asp-route-id="@item.Id">
+                                            <i class="bi bi-eye-fill"></i> Show Details
+                                        </a>
+                                        <a class="btn btn-success text-white @((DateTime.Now > item.EndDate) ? "disabled" : "")"
+                                   asp-controller="Orders"
+                                   asp-action="AddItemToShoppingCart"
+                                   asp-route-id="@item.Id">
+                                            <i class="bi bi-cart-plus"></i> Add to Cart (Price @item.Price.ToString("c"))
+                                        </a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
+
+
+        @*<table class="table table-bordered table-striped" style="width:100%">
+            <thead>
+            <tr>
+            <th>ProfilePictureUrl</th>
+            <th>FullName</th>
+            <th>Bio</th>
+            <th>Actions</th>
+            </tr>
+            </thead>
+            <tbody>
+            @foreach (var obj in resultList)
+            {
+            <tr>
+            <td width="20%" class="align-middle">
+            <img class="rounded-circle" src="@obj.ImageURL" alt="@obj.Name" style="max-width:80%"/>
+            </td>
+            <td width="20%" class="align-middle"> @obj.Name</td>
+            <td width="20%" class="align-middle"> @obj.Description</td>
+            <td class="align-middle">
+            <div class="w-75 btn-group" role="group">
+            <a class="btn btn-primary mx-2"> <i class="bi bi-pencil-square"></i> Edit</a>
+            <a class="btn btn-primary mx-2" href="@($"moviedetails/{obj.Id}")"> <i class="bi bi-pencil-square"></i> Details</a>
+            <a class="btn btn-danger mx-2"> <i class="bi bi-trash-fill"></i> Delete</a>
+            </div>
+            </td>
+            </tr>
+            }
+            </tbody>
+
+            </table>*@
     }
 </div>
