--- a/WebBased/BlazorAppServer/Shared/NavMenu.razor
+++ b/WebBased/BlazorAppServer/Shared/NavMenu.razor
@@ -38,7 +38,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="actor">Actors</a>
+                    <a class="nav-link" href="/">Actors</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="producer">Producer</a>
