--- a/WebBased/BlazorAppServer/Pages/ActorDetails.razor
+++ b/WebBased/BlazorAppServer/Pages/ActorDetails.razor
@@ -18,7 +18,7 @@ else
     <p class="card-text"></p>
   </div>
         <div class="card-footer @CssClass">
-            <a class="btn btn-dark mx-2" href="\">Back</a>
+            <a class="btn btn-dark mx-2" href="\actor">Back</a>
             <a class="btn btn-dark mx-2"> Edit</a>
             <a class="btn btn-dark mx-2"> Delete</a>
 
