--- a/WebBased/BlazorAppServer/Pages/MovieList.razor
+++ b/WebBased/BlazorAppServer/Pages/MovieList.razor
@@ -1,15 +1,7 @@
-﻿@page "/movie"
+﻿@page "/"
 @inherits MovieListBase
 
 <div class="container p-3">
-    <div align="right">
-        <div class="col-6 text-end">
-            <a asp-controller="Actors" asp-action="AddActor" class="btn btn-primary">
-                <i class="bi bi-plus-circle"></i> &nbsp; Add New Movie
-            </a>
-        </div>
-    </div>
-    <br /><br />
     @if (resultList == null)
     {
         <div class="spinner"></div>
@@ -66,7 +58,7 @@
                             <div class="col-md-12">
                                 <div class="card-footer ">
                                     <p class="card-text">
-                                        <a class="btn btn-outline-primary float-right" asp-action="Details" asp-route-id="@item.Id">
+                                        <a class="btn btn-outline-primary float-right" href="@($"moviedetails/{item.Id}")">
                                             <i class="bi bi-eye-fill"></i> Show Details
                                         </a>
                                         <a class="btn btn-success text-white @((DateTime.Now > item.EndDate) ? "disabled" : "")"
