--- a/WebBased/BlazorAppServer/Shared/NavMenu.razor
+++ b/WebBased/BlazorAppServer/Shared/NavMenu.razor
@@ -38,16 +38,17 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Actors</a>
+                    <a class="nav-link" href="/">Movies</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="producer">Producer</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="movie">Movies</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="cinema">Cinema</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Management</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="cinema">Cinema</a>
+                        <a class="dropdown-item" href="producer">Producer</a>
+                        <a class="dropdown-item" href="actor">Actors</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Separated link</a>
+                    </div>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Features</a>
@@ -57,16 +58,6 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">About</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Separated link</a>
-                    </div>
                 </li>
             </ul>
             <form class="d-flex">
