--- a/WebBased/BlazorAppServer/Pages/ActorDetails.razor
+++ b/WebBased/BlazorAppServer/Pages/ActorDetails.razor
@@ -19,7 +19,7 @@ else
   </div>
         <div class="card-footer @CssClass">
             <a class="btn btn-dark mx-2" href="\actor">Back</a>
-            <a class="btn btn-dark mx-2"> Edit</a>
+            <a class="btn btn-dark mx-2" href="@($"editactor/{result.Id}")"> Edit</a>
             <a class="btn btn-dark mx-2"> Delete</a>
 
         </div>
