--- a/WebBased/BlazorAppServer/Pages/DisplayActor.razor
+++ b/WebBased/BlazorAppServer/Pages/DisplayActor.razor
@@ -12,8 +12,8 @@
     {
         <td class="align-middle">
             <div class="w-75 btn-group" role="group">
-                <a class="btn btn-dark">  Edit</a>
                 <a class="btn  btn-dark" href="@($"actordetails/{Actor.Id}")">Details</a>
+                <a class="btn btn-dark" href="@($"editactor/{Actor.Id}")">  Edit</a>
                 <a class="btn  btn-dark">Delete</a>
             </div>
         </td>
