--- a/WebBased/BlazorAppServer/Pages/EditActor.razor
+++ b/WebBased/BlazorAppServer/Pages/EditActor.razor
@@ -15,7 +15,7 @@ else
             <table class="table" style="width:100%">
                 <tr>
                     <td style="width:30%">
-                        <div align="center">
+                        <div class="rounded-circle" align="center">
                             <img src="@picUrl" alt="Image" height="250" width="230" align="middle">
                         </div>
                     </td>
@@ -49,34 +49,3 @@ else
         </fieldset>
     </EditForm>
 }
-@*<div class="container" style="justify-content: left" >
-    <EditForm Model="@Actor">
-    <div class="form-group row">
-    <label for="profilePictureURL" class="col-sm-2 col-form-label">
-    Pic url
-    </label>
-    <div class="col-sm-10">
-    <InputText id="firstName" class="form-control" placeholder="Pic url"
-    @bind-Value="Actor.ProfilePictureURL" />
-    </div>
-    </div>
-    <div class="form-group row">
-    <label for="fullName" class="col-sm-2 col-form-label">
-    Full Name
-    </label>
-    <div class="col-sm-10">
-    <InputText id="lastName" class="form-control" placeholder="Full Name"
-    @bind-Value="Actor.FullName" />
-    </div>
-    </div>
-    <div class="form-group row">
-    <label for="bio" class="col-sm-2 col-form-label">
-    About
-    </label>
-    <div class="col-sm-10">
-    <InputText id="email" class="form-control" placeholder="About"
-    @bind-Value="Actor.Bio" />
-    </div>
-    </div>
-    </EditForm>
-    </div>*@
