categorization of pages in folder

--- a/WebBased/BlazorAppServer/Pages/Actors/ActorList.razor
+++ b/WebBased/BlazorAppServer/Pages/Actors/ActorList.razor
@@ -4,7 +4,7 @@
 <div class="container p-3">
     <div align="right">
         <div class="col-6 text-end">
-            <a asp-controller="Actors" asp-action="AddActor" class="btn btn-primary">
+            <a class="btn btn-primary" href="editactor">
                 <i class="bi bi-plus-circle"></i> &nbsp; Add New Actor
             </a>
         </div>
