--- a/WebBased/BlazorAppServer/Pages/Actors/ActorDetails.razor
+++ b/WebBased/BlazorAppServer/Pages/Actors/ActorDetails.razor
@@ -20,7 +20,7 @@ else
         <div class="card-footer @CssClass">
             <a class="btn btn-dark mx-2" href="\actor">Back</a>
             <a class="btn btn-dark mx-2" href="@($"editactor/{result.Id}")"> Edit</a>
-            <a class="btn btn-dark mx-2"> Delete</a>
+             <a class="btn  btn-dark" @onclick="DeleteActor" >Delete</a>
 
         </div>
     </div>
