adding delete dialog

--- a/WebBased/BlazorAppServer/Pages/Actors/DisplayActor.razor
+++ b/WebBased/BlazorAppServer/Pages/Actors/DisplayActor.razor
@@ -20,6 +20,5 @@
         </td>
     }
 </tr> 
-<Confirm @ref="confirmBase" ConfirmationChanged="ConfirmDelete_Click" ConfirmationMessage=@($"Are you sure you want to delete \"{Actor.FullName}\"")>
-
-</Confirm>
+<Confirm @ref="confirmBase" ConfirmationChanged="ConfirmDelete_Click" 
+ConfirmationMessage=@($"Are you sure you want to delete \"{Actor.FullName}\"")></Confirm>
