--- a/WebBased/BlazorAppServer/Shared/MainLayout.razor
+++ b/WebBased/BlazorAppServer/Shared/MainLayout.razor
@@ -2,12 +2,12 @@
 
 <PageTitle>BlazorAppServer</PageTitle>
 
-<div >
+<div class="container" >
     <div>
         <NavMenu />
     </div>
     <main>
-        <div align="center">
+        <div >
            @Body
         </div>
     </main>
